[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Level_Components/Code_Blocks/Pickup.gd" type="Script" id=1]
[ext_resource path="res://Assets/Objects/Code_Blocks/Pick_Up.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/CodeBlock.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Fonts/angerpoise lampshade.otf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23, 23.5 )

[sub_resource type="DynamicFont" id=2]
outline_color = Color( 0.00392157, 0.00392157, 0.00392157, 1 )
font_data = ExtResource( 4 )

[node name="Pickup" type="Area2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0.5 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.499999, 1 )
scale = Vector2( 0.391667, 0.413793 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CodeBlock" parent="." instance=ExtResource( 3 )]

[node name="SelectSlotNum" type="MenuButton" parent="."]
margin_left = -20.0
margin_top = 3.0
margin_right = 22.0
margin_bottom = 23.0
mouse_default_cursor_shape = 2

[node name="Label" type="Label" parent="SelectSlotNum"]
margin_right = 40.0
margin_bottom = 20.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[connection signal="input_event" from="." to="." method="_on_Area2D_input_event"]
